<?xml version="1.0"?>
<package format="3">
  <name>robot_bringup</name>
  <version>0.0.1</version>
  <description>System bringup launch files</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_python</buildtool_depend>
  <depend>robot_gazebo</depend>
  <depend>robot_slam</depend>
  <depend>robot_loc</depend>
  <depend>robot_navigation</depend>
  <depend>robot_description</depend>
  <exec_depend>ros2launch</exec_depend>
  <export><build_type>ament_python</build_type></export>
</package>
