<?xml version="1.0"?>
<package format="3">
  <name>robot_gazebo</name>
  <version>0.0.1</version>
  <description>Gazebo simulation world and plugins</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_plugins</depend>
  <depend>robot_description</depend>
  <depend>ros2launch</depend>
  <export><build_type>ament_cmake</build_type></export>
</package>
