<?xml version="1.0"?>
<package format="3">
  <name>robot_loc</name>
  <version>0.0.1</version>
  <description>AMCL and EKF localization</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>nav2_amcl</depend>
  <depend>nav2_map_server</depend>
  <depend>slam_toolbox</depend>
  <export><build_type>ament_cmake</build_type></export>
</package>
